Building Page alignment fixes and HeatMap refactor.

--- a/src/sharedComponents/barChartWidget/style.scss
+++ b/src/sharedComponents/barChartWidget/style.scss
@@ -10,7 +10,7 @@
         padding: 1rem 24px 0 24px;
     }
 
-    padding-right: 0.5rem;
+    padding-right: 1rem;
     margin-bottom: 5px;
 
     &-wrapper {
